Dynamic text size

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body, html{
     margin: 0;
+    overflow: hidden;
 }
 #background-video{
     width: 100vw;
@@ -38,13 +39,14 @@ body, html{
     width: 100vw;
     height: 100vh;
     display: flex;
+    
     flex-direction: column;
     justify-content: center;
     align-items: center;
     & h2{
         color: white;
         font-family: 'Montserrat', sans-serif;
-        font-size: 70px;
+        font-size: clamp(50px, 4vw, 70px);
         margin: 15px 0;
     }
 }
